organized backtester foundation and cleaned up

--- a/planning.ipynb
+++ b/planning.ipynb
@@ -6,27 +6,242 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Callable, List, Tuple, Dict\n",
+    "from typing import Callable, List, Tuple, Dict, Any\n",
     "import yfinance as yf\n",
-    "from pandas import DataFrame\n",
+    "from pandas import DataFrame, Series\n",
+    "from datetime import datetime\n",
     "\n",
     "class Backtester:\n",
-    "  def __init__(self, strategy: Callable[[DataFrame], List[float]]):\n",
+    "  def __init__(self, strategy: Callable):\n",
     "    self.strategy = strategy\n",
     "\n",
-    "  def testTicker(self, ticker: str, start: str, end: str) -> float: # takes in ticker symbol, start date, end date\n",
+    "\n",
+    "  def testTickerReport(self, ticker: str, start: str, end: str, startingAmount: float = 1000000.00) -> Dict[str, Any]: # returns a tuple of a dictionary of dates and prices, and a list of returns\n",
     "    stock = yf.Ticker(ticker)\n",
-    "    data stock.h.history(start=start, end=en\n",
+    "    data = stock.history(start=start, end=end)\n",
     "    data = data['Close'].to_list()\n",
-    "    return self.strategy(data)\n",
+    "    return self.testCustomReport(data, start, end, startingAmount)\n",
+    "\n",
+    "  @staticmethod\n",
+    "  def getRatios(pctChanges: List[float], maxDrawdown: float, overallReturn: float, n: int) -> List[float]:\n",
+    "    pct = Series(pctChanges)\n",
+    "    riskFreeRate = yf.download('^IRX', start=pct.index[0], end=pct.index[-1])['Close'].pct_change().mean()\n",
+    "\n",
+    "    sharpe = (overallReturn-riskFreeRate)/pct.std()\n",
+    "    sortino = (overallReturn-riskFreeRate)/pct[pct < 0].std()\n",
+    "    calmar = overallReturn/maxDrawdown\n",
+    "    return [sharpe, sortino, calmar]\n",
+    "\n",
+    "\n",
+    "  def testCustomReport(self, data: List[float], start: str, end: str, startingAmount: float = 1000000.00) -> float:\n",
+    "    signals = self.strategy(data)\n",
+    "    amt = startingAmount\n",
+    "    histArr = []\n",
+    "    trades = []\n",
+    "    drawdowns = []\n",
+    "    bought = False\n",
+    "    boughtPrice = 0\n",
+    "    shares = 0\n",
+    "    prev = 0\n",
+    "    for price, signal in zip(data, signals):\n",
+    "      if prev != signal:\n",
+    "        if signal: # Buying a stock\n",
+    "          bought = True\n",
+    "          boughtPrice = minPrice = price\n",
+    "          currentDuration = 0\n",
+    "          currentDrawdownDuration = 0\n",
+    "          shares = int(amt/price)\n",
+    "          amt -= shares * price\n",
+    "        else: # Selling a stock\n",
+    "          bought = False\n",
+    "          trades.append((currentDuration, (price-boughtPrice)/boughtPrice))\n",
+    "          drawdowns.append((minPrice-price)/price)\n",
+    "          amt += price * shares\n",
+    "          shares = 0\n",
+    "      if bought:\n",
+    "        if price < boughtPrice:\n",
+    "          currentDrawdownDuration += 1\n",
+    "        else:\n",
+    "          drawdowns.append((currentDrawdownDuration, (minPrice-price)/price))\n",
+    "          currentDrawdownDuration = 0\n",
+    "\n",
+    "        currentDuration += 1\n",
+    "        minPrice = min(minPrice, price)\n",
+    "      prev = signal\n",
+    "      histArr.append(shares*price+amt)\n",
+    "    totals = histArr\n",
     "    \n",
-    "  def testTickerDetailed(self, ticker: str, start: str, end: str) -> Tuple(Dict[str, float], List[float]): # returns a tuple of a dictionary of dates and prices, and a list of returns\n",
+    "    report = {}\n",
+    "    report['Start'] = start\n",
+    "    report['End'] = end\n",
+    "    report['Duration'] = len(totals)\n",
+    "    report['Exposure Time'] = sum([x[0] for x in trades])/len(trades)\n",
+    "    report['Net Worth'] = totals\n",
+    "\n",
+    "    report['Equity Final'] = totals[-1]\n",
+    "    report['Equity Peak'] = max(totals)\n",
+    "\n",
+    "    report['Return'] = (totals[-1]-startingAmount)/startingAmount\n",
+    "    report['Buy and Hold Return'] = (data[-1]-data[0])/data[0]\n",
+    "\n",
+    "    report['Max Drawdown'] = min(d[1] for d in drawdowns)\n",
+    "    report['Avg Drawdown'] = sum(d[1] for d in drawdowns)/len(drawdowns)\n",
+    "    report[\"Max Drawdown Duration\"] = max(d[0] for d in drawdowns)\n",
+    "    report[\"Avg Drawdown Duration\"] = sum(d[0] for d in drawdowns)/len(drawdowns)\n",
+    "    \n",
+    "    report[\"# Trades\"] = len(trades)\n",
+    "    report[\"Win Rate\"] = sum(1 for t in trades if t[1] > 0)/len(trades)\n",
+    "    report[\"Best Trade\"] = max(t[1] for t in trades)\n",
+    "    report[\"Worst Trade\"] = min(t[1] for t in trades)\n",
+    "\n",
+    "    report[\"Max Trade Duration\"] = max(t[0] for t in trades)\n",
+    "    report[\"Avg Trade Duration\"] = sum(t[0] for t in trades)/len(trades)\n",
+    "\n",
+    "    report[\"Sharpe Ratio\"], report[\"Sortino Ratio\"], report[\"Calmar Ratio\"] = self.getRatios([x[1] for x in trades], report[\"Max Drawdown\"], report[\"Return\"], len(trades))\n",
+    "    \n",
+    "    return report\n",
+    "\n",
+    "  def graphTicker(self, ticker: str, start: str, end: str) -> None:\n",
     "    pass\n",
     "\n",
-    "  def testCustom(self, data: List[float]) -> float:\n",
+    "  def graphCustom(self, data: List[float]) -> None:\n",
     "    pass\n",
     "\n",
-    "  def testCustomDetailed(self, data: List[float]) -> Tuple(Dict[str, float], List[float]):\n",
+    "# How to factor in a look back period for a potential strategy\n",
+    "# Data clean up and organization between different sources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Callable, List, Tuple, Dict, Any\n",
+    "import yfinance as yf\n",
+    "from pandas import DataFrame\n",
+    "from datetime import datetime\n",
+    "\n",
+    "class Backtester:\n",
+    "  def __init__(self, strategy: Callable):\n",
+    "    self.strategy = strategy\n",
+    "\n",
+    "  def testTicker(self, ticker: str, start: str, end: str, startingAmount: float = 1000000.00) -> List[float]: # takes in ticker symbol, start date, end date\n",
+    "    stock = yf.Ticker(ticker)\n",
+    "    data = stock.history(start=start, end=end)\n",
+    "    data = data['Close'].to_list()\n",
+    "    signals = self.strategy(data)\n",
+    "\n",
+    "    amt = startingAmount\n",
+    "    histArr = []\n",
+    "    shares = 0\n",
+    "    prev = 0\n",
+    "    for price, signal in zip(data, signals):\n",
+    "      if prev != signal:\n",
+    "        if signal:\n",
+    "          shares = int(amt/price)\n",
+    "          amt -= shares * price\n",
+    "        else:\n",
+    "          amt += price * shares\n",
+    "          shares = 0\n",
+    "      prev = signal\n",
+    "      histArr.append(shares*price+amt)\n",
+    "\n",
+    "    return histArr\n",
+    "\n",
+    "\n",
+    "  def testTickerReport(self, ticker: str, start: str, end: str, startingAmount: float = 1000000.00) -> Dict[str, Any]: # returns a tuple of a dictionary of dates and prices, and a list of returns\n",
+    "    stock = yf.Ticker(ticker)\n",
+    "    data = stock.history(start=start, end=end)\n",
+    "    data = data['Close'].to_list()\n",
+    "    signals = self.strategy(data)\n",
+    "\n",
+    "    amt = startingAmount\n",
+    "    histArr = []\n",
+    "    trades = []\n",
+    "    drawdowns = []\n",
+    "    bought = False\n",
+    "    boughtPrice = 0\n",
+    "    shares = 0\n",
+    "    prev = 0\n",
+    "    for price, signal in zip(data, signals):\n",
+    "      if prev != signal:\n",
+    "        if signal: # Buying a stock\n",
+    "          bought = True\n",
+    "          boughtPrice = minPrice = price\n",
+    "          currentDuration = 0\n",
+    "          currentDrawdownDuration = 0\n",
+    "          shares = int(amt/price)\n",
+    "          amt -= shares * price\n",
+    "        else: # Selling a stock\n",
+    "          bought = False\n",
+    "          trades.append((currentDuration, (price-boughtPrice)/boughtPrice))\n",
+    "          drawdowns.append((minPrice-price)/price)\n",
+    "          amt += price * shares\n",
+    "          shares = 0\n",
+    "      if bought:\n",
+    "        if price < boughtPrice:\n",
+    "          currentDrawdownDuration += 1\n",
+    "        else:\n",
+    "          drawdowns.append((currentDrawdownDuration, (minPrice-price)/price))\n",
+    "          currentDrawdownDuration = 0\n",
+    "\n",
+    "        currentDuration += 1\n",
+    "        minPrice = min(minPrice, price)\n",
+    "      prev = signal\n",
+    "      histArr.append(shares*price+amt)\n",
+    "    totals = histArr\n",
+    "    \n",
+    "    report = {}\n",
+    "    report['Start'] = start\n",
+    "    report['End'] = end\n",
+    "    report['Duration'] = len(totals)\n",
+    "    report['Exposure Time'] = sum([x[0] for x in trades])/len(trades)\n",
+    "    report['Net Worth'] = totals\n",
+    "\n",
+    "    report['Equity Final'] = totals[-1]\n",
+    "    report['Equity Peak'] = max(totals)\n",
+    "\n",
+    "    report['Return'] = (totals[-1]-startingAmount)/startingAmount\n",
+    "    report['Buy and Hold Return'] = (data[-1]-data[0])/data[0]\n",
+    "\n",
+    "    report['Max Drawdown'] = min(d[1] for d in drawdowns)\n",
+    "    report['Avg Drawdown'] = sum(d[1] for d in drawdowns)/len(drawdowns)\n",
+    "    report[\"Max Drawdown Duration\"] = max(d[0] for d in drawdowns)\n",
+    "    report[\"Avg Drawdown Duration\"] = sum(d[0] for d in drawdowns)/len(drawdowns)\n",
+    "    \n",
+    "    report[\"# Trades\"] = len(trades)\n",
+    "    report[\"Win Rate\"] = sum(1 for t in trades if t[1] > 0)/len(trades)\n",
+    "    report[\"Best Trade\"] = max(t[1] for t in trades)\n",
+    "    report[\"Worst Trade\"] = min(t[1] for t in trades)\n",
+    "\n",
+    "    report[\"Max Trade Duration\"] = max(t[0] for t in trades)\n",
+    "    report[\"Avg Trade Duration\"] = sum(t[0] for t in trades)/len(trades)\n",
+    "    \n",
+    "    return report\n",
+    "\n",
+    "\n",
+    "  def testCustom(self, data: List[float], start: str, end: str, startingAmount: float = 1000000.00) -> float:\n",
+    "    signals = self.strategy(data)\n",
+    "\n",
+    "    amt = startingAmount\n",
+    "    histArr = []\n",
+    "    shares = 0\n",
+    "    prev = 0\n",
+    "    for price, signal in zip(data, signals):\n",
+    "      if prev != signal:\n",
+    "        if signal:\n",
+    "          shares = int(amt/price)\n",
+    "          amt -= shares * price\n",
+    "        else:\n",
+    "          amt += price * shares\n",
+    "          shares = 0\n",
+    "      prev = signal\n",
+    "      histArr.append(shares*price+amt)\n",
+    "\n",
+    "      return histArr\n",
+    "\n",
+    "  def testCustomReport(self, data: List[float]) -> Tuple[Dict[str, float], List[float]]:\n",
     "    pass\n",
     "\n",
     "  def graphTicker(self, ticker: str, start: str, end: str) -> None:\n",
@@ -36,7 +251,7 @@
     "    pass\n",
     "\n",
     "# How to factor in a look back period for a potential strategy\n",
-    "# Data clean up and organization between different sources\n"
+    "# Data clean up and organization between different sources"
    ]
   },
   {
@@ -280,7 +495,7 @@
     "    stock = yf.Ticker(ticker)\n",
     "    data = stock.history(start=start, end=end)\n",
     "    prices = data['Close'].to_list()\n",
-    "    arr = [1_000_000]\n",
+    "    arr = [1000000]\n",
     "    for i in range(1, len(prices)):\n",
     "        arr.append(arr[i - 1] * (1 + (randrange(-100, 100) / 1000)))\n",
     "    return arr\n",
