Hassan's Changes & Fully Documented

--- a/Commented_Backtester.ipynb
+++ b/Commented_Backtester.ipynb
@@ -8,10 +8,16 @@
    "source": [
     "from pandas import DataFrame, Series\n",
     "\n",
-    "\n",
     "def momentum_trading_strategy(data, short_window=50, long_window=200, entry_threshold=0.02, exit_threshold=0.01):\n",
-    "    \"\"\"\n",
-    "    Parameters:\n",
+    "    \"\"\"Generates trading signals based on momentum strategy using moving averages.\n",
+    "    \n",
+    "    This function computes short and long term moving averages. A buy signal is generated when \n",
+    "    the short-term average is greater than the long-term average and the return exceeds the entry threshold.\n",
+    "    A sell signal is generated when the short-term average is less than the long-term average and the\n",
+    "    return drops below the negative entry threshold. Exit signals for both buying and selling are based on \n",
+    "    respective thresholds.\n",
+    "\n",
+    "    Args:\n",
     "    - data: DataFrame with 'Date', 'Price', and any additional columns needed for analysis.\n",
     "    - short_window: Short-term moving average window.\n",
     "    - long_window: Long-term moving average window.\n",
@@ -21,41 +27,34 @@
     "    Returns:\n",
     "    - signals: DataFrame with buy/sell signals (1 for buy, -1 for sell, 0 for hold).\n",
     "    \"\"\"\n",
-    "\n",
+    "    \n",
+    "    # Compute short and long term moving averages\n",
     "    shorts = data.rolling(window=short_window, min_periods=1).mean()\n",
     "    longs = data.rolling(window=long_window, min_periods=1).mean()\n",
-    "\n",
+    "    \n",
+    "    # Initialize signals list with 'hold' for all data points\n",
     "    signals = [0] * len(data)\n",
-    "\n",
+    "    \n",
+    "    # Compute percentage change for each data point to detect significant price movement\n",
     "    returns = data.pct_change()\n",
-    "\n",
+    "    \n",
+    "    # Generate buy or sell signals based on moving averages and the entry threshold\n",
     "    for i in range(1, len(data)):\n",
-    "        if (\n",
-    "            shorts[i] > longs[i] and\n",
-    "            returns[i] > entry_threshold\n",
-    "        ):\n",
-    "            signals[i] = 1  \n",
+    "        if shorts[i] > longs[i] and returns[i] > entry_threshold:\n",
+    "            signals[i] = 1\n",
+    "        elif shorts[i] < longs[i] and returns[i] < -entry_threshold:\n",
+    "            signals[i] = -1\n",
     "\n",
-    "        elif (\n",
-    "            shorts[i] < longs[i] and\n",
-    "            returns[i] < -entry_threshold\n",
-    "        ):\n",
-    "            signals[i] = -1  \n",
-    "\n",
+    "    # Generate exit signals based on the exit threshold\n",
     "    for i in range(1, len(data)):\n",
-    "        if (\n",
-    "            signals[i] == 1 and\n",
-    "            returns[i] < -exit_threshold\n",
-    "        ):\n",
-    "            signals[i] = 0  \n",
-    "\n",
-    "        elif (\n",
-    "            signals[i] == -1 and\n",
-    "            returns[i] > exit_threshold\n",
-    "        ):\n",
-    "            signals[i] = 0  \n",
+    "        if signals[i] == 1 and returns[i] < -exit_threshold:\n",
+    "            signals[i] = 0\n",
+    "        elif signals[i] == -1 and returns[i] > exit_threshold:\n",
+    "            signals[i] = 0\n",
     "\n",
     "    return signals\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -72,10 +71,28 @@
     "\n",
     "class Backtester:\n",
     "  def __init__(self, strategy: Callable):\n",
+    "    \"\"\"Initializes the Backtester class with a trading strategy.\n",
+    "\n",
+    "    Args:\n",
+    "    - strategy (Callable): Trading strategy function.\n",
+    "    \"\"\"\n",
     "    self.strategy = strategy\n",
     "\n",
     "\n",
-    "  def testTickerReport(self, ticker: str, start: str, end: str, startingAmount: float = 1000000.00) -> Dict[str, Any]: # returns a tuple of a dictionary of dates and prices, and a list of returns\n",
+    "  def testTickerReport(self, ticker: str, start: str, end: str, startingAmount: float = 1000000.00) -> Dict[str, Any]: \n",
+    "    \"\"\"Test a trading strategy on a specific ticker within a given date range.\n",
+    "\n",
+    "    Args:\n",
+    "    - ticker (str): Stock ticker symbol.\n",
+    "    - start (str): Start date for backtesting (inclusive).\n",
+    "    - end (str): End date for backtesting (inclusive).\n",
+    "    - startingAmount (float): Starting capital for backtesting.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Dict[str, Any]: Backtesting report dictionary.\n",
+    "    \"\"\"\n",
+    "  \n",
+    "  \n",
     "    stock = yf.Ticker(ticker)\n",
     "    data = stock.history(start=start, end=end)\n",
     "    data = data['Close']\n",
@@ -83,6 +100,18 @@
     "\n",
     "  @staticmethod\n",
     "  def getRatios(pctChanges: List[float], maxDrawdown: float, overallReturn: float, n: int) -> List[float]:\n",
+    "    \"\"\"Compute performance metrics for a trading strategy.\n",
+    "\n",
+    "    Args:\n",
+    "    - pctChanges (List[float]): List of percentage changes.\n",
+    "    - maxDrawdown (float): Maximum drawdown.\n",
+    "    - overallReturn (float): Overall return of the strategy.\n",
+    "    - n (int): Number of trades.\n",
+    "\n",
+    "    Returns:\n",
+    "    - List[float]: List containing Sharpe ratio, Sortino ratio, and Calmar ratio.\n",
+    "    \"\"\"\n",
+    "   \n",
     "    pct = Series(pctChanges)\n",
     "\n",
     "    current_date = Timestamp(datetime.today())\n",
@@ -100,6 +129,18 @@
     "\n",
     "\n",
     "  def testCustomReport(self, data: Series, start: str, end: str, startingAmount: float = 1000000.00) -> float:\n",
+    "    \n",
+    "    \"\"\"Test a trading strategy on custom price data.\n",
+    "\n",
+    "    Args:\n",
+    "    - data (Series): Series of closing prices.\n",
+    "    - start (str): Start date for backtesting (inclusive).\n",
+    "    - end (str): End date for backtesting (inclusive).\n",
+    "    - startingAmount (float): Starting capital for backtesting.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Dict[str, Any]: Backtesting report dictionary.\n",
+    "      \"\"\"\n",
     "    signals = self.strategy(data) # Should return list of -1, 0, 1\n",
     "    amt = startingAmount\n",
     "    histArr = []\n",
@@ -167,14 +208,27 @@
     "    \n",
     "    return report\n",
     "\n",
+    "\n",
     "  def graphTicker(self, ticker: str, start: str, end: str) -> None:\n",
-    "    pass\n",
+    "      \"\"\"Generate a graph for a specific ticker within a given date range.\n",
+    "\n",
+    "      Args:\n",
+    "      - ticker (str): Stock ticker symbol.\n",
+    "      - start (str): Start date for graphing.\n",
+    "      - end (str): End date for graphing.\n",
+    "      \"\"\"\n",
+    "      pass\n",
     "\n",
     "  def graphCustom(self, data: List[float]) -> None:\n",
-    "    pass\n",
+    "      \"\"\"Generate a custom graph based on input data.\n",
     "\n",
-    "# How to factor in a look back period for a potential strategy\n",
-    "# Data clean up and organization between different sources"
+    "      Args:\n",
+    "      - data (List[float]): List of data values to plot.\n",
+    "      \"\"\"\n",
+    "      pass\n",
+    "\n",
+    "# Additional Note: How to factor in a look back period for a potential strategy\n",
+    "# Additional Node: Data clean up and organization between different sources"
    ]
   },
   {
@@ -215,12 +269,30 @@
    ],
    "source": [
     "def wrapper(data):\n",
-    "  return momentum_trading_strategy(data, short_window=50, long_window=200, entry_threshold=0.02, exit_threshold=0.01)\n",
+    "    \"\"\"Wraps the momentum trading strategy with preset parameters.\n",
+    "    \n",
+    "    This function wraps the momentum trading strategy function and sets \n",
+    "    some default parameters for the strategy such as short_window, \n",
+    "    long_window, entry_threshold, and exit_threshold.\n",
+    "    \n",
+    "    Args:\n",
+    "        data (pandas.Series or similar): Time series data of stock prices.\n",
+    "        \n",
+    "    Returns:\n",
+    "        List[int]: List of trading signals (-1, 0, 1) for the given data.\n",
+    "    \"\"\"\n",
+    "    return momentum_trading_strategy(data, short_window=50, long_window=200, \n",
+    "                                     entry_threshold=0.02, exit_threshold=0.01)\n",
     "\n",
+    "# Create a Backtester instance using the wrapper function as the strategy.\n",
     "bt = Backtester(wrapper)\n",
+    "\n",
+    "# Test the wrapped strategy on AAPL's stock data from 2010 to 2020.\n",
     "test = bt.testTickerReport('AAPL', '2010-01-01', '2020-01-01')\n",
+    "\n",
+    "# Print the results of the backtest.\n",
     "for key in test:\n",
-    "  print(key, test[key])"
+    "    print(key, test[key])\n"
    ]
   }
  ],
