--- a/abhay.ipynb
+++ b/abhay.ipynb
@@ -222,6 +222,210 @@
     "for key in test:\n",
     "  print(key, test[key])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-04 00:00:00-05:00</th>\n",
+       "      <td>6.469950</td>\n",
+       "      <td>6.502386</td>\n",
+       "      <td>6.438120</td>\n",
+       "      <td>6.487532</td>\n",
+       "      <td>493729600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-05 00:00:00-05:00</th>\n",
+       "      <td>6.505420</td>\n",
+       "      <td>6.535431</td>\n",
+       "      <td>6.464495</td>\n",
+       "      <td>6.498751</td>\n",
+       "      <td>601904800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-06 00:00:00-05:00</th>\n",
+       "      <td>6.498750</td>\n",
+       "      <td>6.524517</td>\n",
+       "      <td>6.388709</td>\n",
+       "      <td>6.395379</td>\n",
+       "      <td>552160000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-07 00:00:00-05:00</th>\n",
+       "      <td>6.419023</td>\n",
+       "      <td>6.426602</td>\n",
+       "      <td>6.337174</td>\n",
+       "      <td>6.383555</td>\n",
+       "      <td>477131200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-08 00:00:00-05:00</th>\n",
+       "      <td>6.375070</td>\n",
+       "      <td>6.426604</td>\n",
+       "      <td>6.337481</td>\n",
+       "      <td>6.425997</td>\n",
+       "      <td>447610800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-24 00:00:00-05:00</th>\n",
+       "      <td>69.429886</td>\n",
+       "      <td>69.478665</td>\n",
+       "      <td>68.998223</td>\n",
+       "      <td>69.327454</td>\n",
+       "      <td>48478800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-26 00:00:00-05:00</th>\n",
+       "      <td>69.461584</td>\n",
+       "      <td>70.720000</td>\n",
+       "      <td>69.432320</td>\n",
+       "      <td>70.702927</td>\n",
+       "      <td>93121200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-27 00:00:00-05:00</th>\n",
+       "      <td>70.998008</td>\n",
+       "      <td>71.693064</td>\n",
+       "      <td>70.266372</td>\n",
+       "      <td>70.676086</td>\n",
+       "      <td>146266000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-30 00:00:00-05:00</th>\n",
+       "      <td>70.593176</td>\n",
+       "      <td>71.380907</td>\n",
+       "      <td>69.559132</td>\n",
+       "      <td>71.095566</td>\n",
+       "      <td>144114400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 00:00:00-05:00</th>\n",
+       "      <td>70.707814</td>\n",
+       "      <td>71.622360</td>\n",
+       "      <td>70.607823</td>\n",
+       "      <td>71.615044</td>\n",
+       "      <td>100805600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2516 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Open       High        Low      Close  \\\n",
+       "Date                                                                    \n",
+       "2010-01-04 00:00:00-05:00   6.469950   6.502386   6.438120   6.487532   \n",
+       "2010-01-05 00:00:00-05:00   6.505420   6.535431   6.464495   6.498751   \n",
+       "2010-01-06 00:00:00-05:00   6.498750   6.524517   6.388709   6.395379   \n",
+       "2010-01-07 00:00:00-05:00   6.419023   6.426602   6.337174   6.383555   \n",
+       "2010-01-08 00:00:00-05:00   6.375070   6.426604   6.337481   6.425997   \n",
+       "...                              ...        ...        ...        ...   \n",
+       "2019-12-24 00:00:00-05:00  69.429886  69.478665  68.998223  69.327454   \n",
+       "2019-12-26 00:00:00-05:00  69.461584  70.720000  69.432320  70.702927   \n",
+       "2019-12-27 00:00:00-05:00  70.998008  71.693064  70.266372  70.676086   \n",
+       "2019-12-30 00:00:00-05:00  70.593176  71.380907  69.559132  71.095566   \n",
+       "2019-12-31 00:00:00-05:00  70.707814  71.622360  70.607823  71.615044   \n",
+       "\n",
+       "                              Volume  Dividends  Stock Splits  \n",
+       "Date                                                           \n",
+       "2010-01-04 00:00:00-05:00  493729600        0.0           0.0  \n",
+       "2010-01-05 00:00:00-05:00  601904800        0.0           0.0  \n",
+       "2010-01-06 00:00:00-05:00  552160000        0.0           0.0  \n",
+       "2010-01-07 00:00:00-05:00  477131200        0.0           0.0  \n",
+       "2010-01-08 00:00:00-05:00  447610800        0.0           0.0  \n",
+       "...                              ...        ...           ...  \n",
+       "2019-12-24 00:00:00-05:00   48478800        0.0           0.0  \n",
+       "2019-12-26 00:00:00-05:00   93121200        0.0           0.0  \n",
+       "2019-12-27 00:00:00-05:00  146266000        0.0           0.0  \n",
+       "2019-12-30 00:00:00-05:00  144114400        0.0           0.0  \n",
+       "2019-12-31 00:00:00-05:00  100805600        0.0           0.0  \n",
+       "\n",
+       "[2516 rows x 7 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "ticker = yf.Ticker('AAPL')\n",
+    "data = ticker.history(start='2010-01-01', end='2020-01-01')\n",
+    "display(data)"
+   ]
   }
  ],
  "metadata": {
